--- a/fastapi-lab/pyproject.toml
+++ b/fastapi-lab/pyproject.toml
@@ -1,14 +1,11 @@
 [project]
-name = "wk09"
+name = "fastapi-lab"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "pyside6>=6.10.1",
-]
-
-[tool.uv.workspace]
-members = [
-    "fastapi-lab",
+    "fastapi>=0.128.2",
+    "sqlalchemy>=2.0.46",
+    "uvicorn>=0.40.0",
 ]
